Attempt capping range when using simple Gaussian proxy in Lotka-Volterra notebook

--- a/code/Gradient_free_thinning.ipynb
+++ b/code/Gradient_free_thinning.ipynb
@@ -23,7 +23,9 @@
     "\n",
     "from stein_thinning.thinning import thin, thin_gf, _make_stein_integrand, _make_stein_gf_integrand\n",
     "from stein_thinning.stein import kmat\n",
-    "from stein_thinning.kernel import make_imq"
+    "from stein_thinning.kernel import make_imq\n",
+    "\n",
+    "from utils.plotting import highlight_points, plot_density"
    ]
   },
   {
@@ -173,23 +175,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "6bac17fb-56a8-4e9e-89b4-0adf20c887ce",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def plot_density(f, ax, xlim, ylim, title, mesh_size=200, levels=200):\n",
-    "    x = np.linspace(*xlim, mesh_size)\n",
-    "    y = np.linspace(*ylim, mesh_size)\n",
-    "    xy = np.moveaxis(np.stack(np.meshgrid(x, y)), 0, 2).reshape(mesh_size * mesh_size, 2)\n",
-    "    z = f(xy).reshape(mesh_size, mesh_size)\n",
-    "\n",
-    "    ax.contourf(x, y, z, levels=levels);\n",
-    "    ax.set_title(title);"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
    "id": "4159da93-85eb-4e9c-94a5-5c4aacbbee1e",
    "metadata": {},
    "outputs": [
@@ -225,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "4c9e6e76-671f-4148-8b4b-350ca45a5d61",
    "metadata": {},
    "outputs": [],
@@ -243,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "d27391c9-04af-4722-be75-2e23c124e022",
    "metadata": {},
    "outputs": [],
@@ -253,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "c38ef0f5-ae4d-4c59-a1e7-e8765a8ad47f",
    "metadata": {},
    "outputs": [],
@@ -264,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "989644ea-3ff2-4c0e-8c4d-090e003c3d36",
    "metadata": {},
    "outputs": [],
@@ -290,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "d3647602-5653-41b8-a4bc-b1d87f22e7b6",
    "metadata": {},
    "outputs": [],
@@ -316,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "370f91ac-c78e-48ca-a6f2-fa4eb68eaf9f",
    "metadata": {},
    "outputs": [],
@@ -344,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "003e9c51-fa57-4183-b607-6189fd6a7444",
    "metadata": {},
    "outputs": [],
@@ -355,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "584a811a-f9f4-4cab-8b0b-170265858f37",
    "metadata": {},
    "outputs": [],
@@ -382,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "f23ee1b6-f0c6-43f2-bf62-cf50d2346d24",
    "metadata": {},
    "outputs": [],
@@ -408,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "a4f0ba8a-e3e7-4bd1-8c3b-cf7c3920249d",
    "metadata": {},
    "outputs": [],
@@ -427,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "4a82e999-0588-4697-a45a-752fab7d1d3a",
    "metadata": {},
    "outputs": [],
@@ -446,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "618febdb-cdbf-478b-a3be-9dac752551bd",
    "metadata": {},
    "outputs": [],
@@ -472,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "7fa015f2-2c65-4c6b-b715-5fd8459c9bba",
    "metadata": {},
    "outputs": [],
@@ -490,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "22edd94f-83ea-4dc5-9574-6f9d4d5c55e4",
    "metadata": {},
    "outputs": [
@@ -521,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "155eb5bd-3e0d-4aec-93af-cca0a421ad56",
    "metadata": {},
    "outputs": [],
@@ -535,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "0d437f2d-8955-4760-b6fa-2b9a1d132a3c",
    "metadata": {},
    "outputs": [],
@@ -545,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "id": "a6518d8d-fa47-49d9-bf92-75d1c6f0012a",
    "metadata": {},
    "outputs": [],
@@ -571,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "id": "fb863cf6-41ac-40b1-a84b-14d07c1d7851",
    "metadata": {},
    "outputs": [],
@@ -590,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "id": "b4bc9e09-864d-4658-b331-4538a03549b6",
    "metadata": {},
    "outputs": [
@@ -613,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "id": "d532f334-8038-433b-a7d6-0b8244d4bb4b",
    "metadata": {},
    "outputs": [],
@@ -631,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "id": "92d0d9ca-8c23-48db-9081-00454eab8af7",
    "metadata": {},
    "outputs": [],
@@ -644,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "id": "c2df7cc0-d906-48c2-bd24-2f2f12166fc2",
    "metadata": {},
    "outputs": [],
@@ -654,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "id": "54edf41e-96fe-45ed-bb38-3f28eff4140b",
    "metadata": {},
    "outputs": [
@@ -678,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "id": "eb1c17cc-e596-447e-8487-cae578da4f7e",
    "metadata": {},
    "outputs": [],
@@ -689,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "id": "59a7f913-1afa-46de-85bc-20dcf050d70f",
    "metadata": {},
    "outputs": [],
@@ -707,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "id": "f20971b1-d344-4696-9eac-93e2fe5bcb8a",
    "metadata": {},
    "outputs": [],
@@ -733,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "id": "ae828def-ffd8-4cd8-9182-4bb6bf4af4d6",
    "metadata": {},
    "outputs": [],
@@ -744,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 34,
    "id": "a00af41e-77f1-4a36-b07a-efc7cd08c3b8",
    "metadata": {},
    "outputs": [
@@ -761,7 +746,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -780,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 35,
    "id": "3e8c2259-97d5-4e13-b2bb-7e5787d25926",
    "metadata": {},
    "outputs": [
@@ -801,8 +786,7 @@
     "fig, axs = plt.subplots(n_rows, n_cols, figsize=(n_cols * 5, n_rows * 4));\n",
     "for i, (idx, title) in enumerate(entries):\n",
     "    ax = axs[i // 2][i % 2]\n",
-    "    ax.scatter(sample[:, 0], sample[:, 1], alpha=0.3, color='gray');\n",
-    "    ax.scatter(sample[idx, 0], sample[idx, 1], color='red');\n",
+    "    highlight_points(sample, idx, ax=ax)\n",
     "    ax.set_title(title);"
    ]
   },
@@ -824,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 36,
    "id": "4d98f84b-5dec-45ea-8748-0de93b5f7638",
    "metadata": {},
    "outputs": [
@@ -841,7 +825,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -860,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 37,
    "id": "c4f99a59-c696-4b58-828b-e8dff1cabd4b",
    "metadata": {},
    "outputs": [],
@@ -870,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 38,
    "id": "33005d58-1cc8-4b71-85c0-a40bf4a3a738",
    "metadata": {},
    "outputs": [
@@ -887,7 +871,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -914,24 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "132387f4-4d45-4bff-a221-fa616b2c06d5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def highlight_points(sample, indices, show_labels=False, ax=None):\n",
-    "    if ax is None:\n",
-    "        fig, ax = plt.subplots()\n",
-    "    ax.scatter(sample[:, 0], sample[:, 1], alpha=0.3, color='gray');\n",
-    "    ax.scatter(sample[indices, 0], sample[indices, 1], color='red');\n",
-    "    if show_labels:\n",
-    "        for i, ind in enumerate(indices):\n",
-    "            ax.text(sample[ind, 0], sample[ind, 1], str(ind));"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 39,
    "id": "a2d7ae1e-29a2-4097-a1aa-23330dc62b9a",
    "metadata": {},
    "outputs": [
@@ -968,7 +935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 40,
    "id": "cb65c087-7f4d-45bd-956c-024404efe3f5",
    "metadata": {},
    "outputs": [
@@ -1007,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 41,
    "id": "a2d651cb-f760-4cfb-b313-3f93bbc4ec17",
    "metadata": {},
    "outputs": [],
@@ -1019,7 +986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 42,
    "id": "a6539b53-cf47-491e-afdb-bd25ef1d32d9",
    "metadata": {},
    "outputs": [],
@@ -1030,7 +997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 43,
    "id": "3fc1f4cd-5266-4bf3-a486-f8f7c8d4567e",
    "metadata": {},
    "outputs": [
@@ -1063,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 44,
    "id": "262f29ab-3365-407a-abcf-cc02189e7c1d",
    "metadata": {},
    "outputs": [
@@ -1106,7 +1073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 45,
    "id": "a5fb1440-a7bd-4e55-93d8-abbcd58aa403",
    "metadata": {},
    "outputs": [
@@ -1155,7 +1122,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
