Attempt fitting distribution for gradient-free thinning in Lotka-Volterra notebook

--- a/code/Gradient_free_thinning.ipynb
+++ b/code/Gradient_free_thinning.ipynb
@@ -80,7 +80,7 @@
     "        return np.take_along_axis(\n",
     "            np.stack(component_samples, axis=1),\n",
     "            indices.reshape(size, 1, 1),\n",
-    "            axis=1\n",
+    "            axis=1,\n",
     "        ).squeeze()\n",
     "\n",
     "    def logpdf(x):\n",
@@ -92,9 +92,9 @@
     "        xc = x[np.newaxis, :, :] - means[:, np.newaxis, :]\n",
     "        # pdf evaluations for all components and all elements of the sample\n",
     "        f = np.stack([mvn.pdf(x, mean=means[i], cov=covs[i]) for i in range(len(weights))])\n",
-    "        # numerator or the score function\n",
+    "        # numerator of the score function\n",
     "        num = np.einsum('i,il,ijk,ilk->lj', weights, f, covs_inv, xc)\n",
-    "        # denominator or the score function\n",
+    "        # denominator of the score function\n",
     "        den = np.einsum('i,il->l', weights, f)\n",
     "        return -num / den[:, np.newaxis]\n",
     "    \n",
