--- a/code/Gradient_free_thinning.ipynb
+++ b/code/Gradient_free_thinning.ipynb
@@ -24,6 +24,7 @@
     "from stein_thinning.thinning import thin, thin_gf, _make_stein_integrand, _make_stein_gf_integrand\n",
     "from stein_thinning.stein import kmat\n",
     "\n",
+    "from utils.mvn import make_mvn_mixture\n",
     "from utils.plotting import highlight_points, plot_density"
    ]
   },
@@ -57,59 +58,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "d1489056-5b52-407f-80c5-3faeeb8aed0c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def make_mvn_mixture(weights, means, covs):\n",
-    "    # invert covariances\n",
-    "    covs_inv = np.linalg.inv(covs)\n",
-    "\n",
-    "    k, d = means.shape\n",
-    "    assert weights.shape == (k,)\n",
-    "    assert covs.shape == (k, d, d)\n",
-    "    \n",
-    "    def rvs(size, random_state):\n",
-    "        component_samples = [\n",
-    "            mvn.rvs(mean=means[i], cov=covs[i], size=size, random_state=random_state)\n",
-    "            for i in range(len(weights))\n",
-    "        ]\n",
-    "        indices = rng.choice(len(weights), size=size, p=weights)\n",
-    "        return np.take_along_axis(\n",
-    "            np.stack(component_samples, axis=1),\n",
-    "            indices.reshape(size, 1, 1),\n",
-    "            axis=1,\n",
-    "        ).squeeze()\n",
-    "\n",
-    "    def logpdf(x):\n",
-    "        f = np.stack([mvn.pdf(x, mean=means[i], cov=covs[i]) for i in range(len(weights))]).reshape(len(weights), -1)\n",
-    "        return np.log(np.einsum('i,il->l', weights, f))\n",
-    "    \n",
-    "    def score(x):\n",
-    "        # centered sample\n",
-    "        xc = x[np.newaxis, :, :] - means[:, np.newaxis, :]\n",
-    "        # pdf evaluations for all components and all elements of the sample\n",
-    "        f = np.stack([mvn.pdf(x, mean=means[i], cov=covs[i]) for i in range(len(weights))])\n",
-    "        # numerator of the score function\n",
-    "        num = np.einsum('i,il,ijk,ilk->lj', weights, f, covs_inv, xc)\n",
-    "        # denominator of the score function\n",
-    "        den = np.einsum('i,il->l', weights, f)\n",
-    "        return -num / den[:, np.newaxis]\n",
-    "    \n",
-    "    def logpdf_jax(x):\n",
-    "        probs = jmvn.pdf(\n",
-    "            x.reshape(-1, 1, d),\n",
-    "            mean=means.reshape(1, k, d),\n",
-    "            cov=covs.reshape(1, k, d, d)\n",
-    "        )\n",
-    "        return jnp.squeeze(jnp.log(jnp.sum(weights * probs, axis=1)))\n",
-    "    \n",
-    "    return rvs, logpdf, score, logpdf_jax"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "8c24561d-e53a-4085-96da-f04603423ea0",
    "metadata": {},
@@ -119,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "fbde6e8c-aed6-46f6-8a87-6f7542625888",
    "metadata": {},
    "outputs": [],
@@ -143,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "488342f7-989a-449c-abf4-dc3664b23ba1",
    "metadata": {},
    "outputs": [],
@@ -161,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "cea33e9d-2b05-4877-8dff-13f85d49a415",
    "metadata": {},
    "outputs": [],
@@ -173,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "4159da93-85eb-4e9c-94a5-5c4aacbbee1e",
    "metadata": {},
    "outputs": [
@@ -209,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "4c9e6e76-671f-4148-8b4b-350ca45a5d61",
    "metadata": {},
    "outputs": [],
@@ -227,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "d27391c9-04af-4722-be75-2e23c124e022",
    "metadata": {},
    "outputs": [],
@@ -237,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "c38ef0f5-ae4d-4c59-a1e7-e8765a8ad47f",
    "metadata": {},
    "outputs": [],
@@ -248,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "989644ea-3ff2-4c0e-8c4d-090e003c3d36",
    "metadata": {},
    "outputs": [],
@@ -274,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "d3647602-5653-41b8-a4bc-b1d87f22e7b6",
    "metadata": {},
    "outputs": [],
@@ -300,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "370f91ac-c78e-48ca-a6f2-fa4eb68eaf9f",
    "metadata": {},
    "outputs": [],
@@ -326,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "f23ee1b6-f0c6-43f2-bf62-cf50d2346d24",
    "metadata": {},
    "outputs": [],
@@ -352,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "71518e6f-1774-41db-95e1-999f7b11782e",
    "metadata": {},
    "outputs": [],
@@ -371,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "a4f0ba8a-e3e7-4bd1-8c3b-cf7c3920249d",
    "metadata": {},
    "outputs": [],
@@ -390,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "4a82e999-0588-4697-a45a-752fab7d1d3a",
    "metadata": {},
    "outputs": [],
@@ -409,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "618febdb-cdbf-478b-a3be-9dac752551bd",
    "metadata": {},
    "outputs": [],
@@ -435,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "7fa015f2-2c65-4c6b-b715-5fd8459c9bba",
    "metadata": {},
    "outputs": [],
@@ -453,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "22edd94f-83ea-4dc5-9574-6f9d4d5c55e4",
    "metadata": {},
    "outputs": [
@@ -484,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "155eb5bd-3e0d-4aec-93af-cca0a421ad56",
    "metadata": {},
    "outputs": [],
@@ -498,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "0d437f2d-8955-4760-b6fa-2b9a1d132a3c",
    "metadata": {},
    "outputs": [],
@@ -508,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "a6518d8d-fa47-49d9-bf92-75d1c6f0012a",
    "metadata": {},
    "outputs": [],
@@ -534,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "fb863cf6-41ac-40b1-a84b-14d07c1d7851",
    "metadata": {},
    "outputs": [],
@@ -554,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "id": "b4bc9e09-864d-4658-b331-4538a03549b6",
    "metadata": {},
    "outputs": [
@@ -577,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "id": "d532f334-8038-433b-a7d6-0b8244d4bb4b",
    "metadata": {},
    "outputs": [],
@@ -595,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "id": "92d0d9ca-8c23-48db-9081-00454eab8af7",
    "metadata": {},
    "outputs": [],
@@ -608,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "id": "c2df7cc0-d906-48c2-bd24-2f2f12166fc2",
    "metadata": {},
    "outputs": [],
@@ -618,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "id": "54edf41e-96fe-45ed-bb38-3f28eff4140b",
    "metadata": {},
    "outputs": [
@@ -642,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "id": "eb1c17cc-e596-447e-8487-cae578da4f7e",
    "metadata": {},
    "outputs": [],
@@ -653,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "id": "59a7f913-1afa-46de-85bc-20dcf050d70f",
    "metadata": {},
    "outputs": [],
@@ -671,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "id": "f20971b1-d344-4696-9eac-93e2fe5bcb8a",
    "metadata": {},
    "outputs": [],
@@ -696,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "id": "ae828def-ffd8-4cd8-9182-4bb6bf4af4d6",
    "metadata": {},
    "outputs": [],
@@ -707,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "id": "a00af41e-77f1-4a36-b07a-efc7cd08c3b8",
    "metadata": {},
    "outputs": [
@@ -723,7 +671,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -742,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "id": "3e8c2259-97d5-4e13-b2bb-7e5787d25926",
    "metadata": {},
    "outputs": [
@@ -785,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 34,
    "id": "4d98f84b-5dec-45ea-8748-0de93b5f7638",
    "metadata": {},
    "outputs": [
@@ -801,7 +749,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -820,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 35,
    "id": "c4f99a59-c696-4b58-828b-e8dff1cabd4b",
    "metadata": {},
    "outputs": [],
@@ -830,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 36,
    "id": "33005d58-1cc8-4b71-85c0-a40bf4a3a738",
    "metadata": {},
    "outputs": [
@@ -846,7 +794,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -873,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 37,
    "id": "a2d7ae1e-29a2-4097-a1aa-23330dc62b9a",
    "metadata": {},
    "outputs": [
@@ -910,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 38,
    "id": "cb65c087-7f4d-45bd-956c-024404efe3f5",
    "metadata": {},
    "outputs": [
@@ -949,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 39,
    "id": "a2d651cb-f760-4cfb-b313-3f93bbc4ec17",
    "metadata": {},
    "outputs": [],
@@ -961,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 40,
    "id": "a6539b53-cf47-491e-afdb-bd25ef1d32d9",
    "metadata": {},
    "outputs": [],
@@ -972,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 41,
    "id": "3fc1f4cd-5266-4bf3-a486-f8f7c8d4567e",
    "metadata": {},
    "outputs": [
@@ -1005,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 42,
    "id": "262f29ab-3365-407a-abcf-cc02189e7c1d",
    "metadata": {},
    "outputs": [
@@ -1048,7 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 43,
    "id": "a5fb1440-a7bd-4e55-93d8-abbcd58aa403",
    "metadata": {},
    "outputs": [
